--- a/index.html
+++ b/index.html
@@ -14,3 +14,21 @@
 <button onclick = 'alert("Book Title and stuff")'>alert</button>
 	
 </html>
+
+<style>
+	body {
+font-family: -apple-system;
+background-color: #333333 ;
+color: white ;
+text-align: center ;
+}
+
+img {
+	text-align: left;
+	background-color: blue;
+	height: 150px;
+	max-width: 25%;
+	border-radius: 5px;
+	border: 10px solid green
+}
+</style>
