--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@ img {
 	height: 150px;
 	max-width: 25%;
 	border-radius: 5px;
-	border: 10px solid green
+	
+}
+
+img:hover {
+	border: 10px solid grey;
 }
 </style>
