--- a/404.html
+++ b/404.html
@@ -8,10 +8,12 @@
 </html>
 <style>
   h1 {
+    text-align: center;
     font-family: -apple-system;
     color: red;
   }
   p {
+    text-align: center;
     font-family: -apple-system;
   }
 </style>
